enhance some code and add light mode

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -2,7 +2,12 @@
 $darkBackground: linear-gradient(170deg, #303030, #000000);
 $dark: #050505;
 $darkFaded: #050505bb;
+$liteDark: rgba(0, 0, 0, 0.5);
+$liteDarkBackground: #3333338c;
+$lightBackground: linear-gradient(110deg, #f5f7fa, #b8c6db);
 $light: #f1f1f1;
+$liteLight: #d1d1d167;
+$lightModeHeaderColor: #414141;
 $headlg: 3.5rem;
 $headsm: 1.7rem;
 $sm: 0.75rem;
