--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -4,7 +4,7 @@ $dark: #050505;
 $darkFaded: #050505bb;
 $liteDark: rgba(0, 0, 0, 0.5);
 $liteDarkBackground: #3333338c;
-$lightBackground: linear-gradient(110deg, #f5f7fa, #b8c6db);
+$lightBackground: linear-gradient(120deg, #fff, #9dc5c3);
 $light: #f1f1f1;
 $liteLight: #d1d1d167;
 $lightModeHeaderColor: #414141;
