--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,33 @@ body {
   scroll-behavior: smooth;
   color: $light;
 }
+
+.page-enter-active {
+  animation: acrossIn 0.45s ease-out both;
+}
+
+.page-leave-active {
+  animation: acrossOut 0.65s ease-in both;
+}
+
+@keyframes acrossIn {
+  0% {
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes acrossOut {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(100%, 0, 0);
+  }
+}
+
 .layout.lightMode {
   background: $lightBackground;
 
